Use CMS in immutable perf test